--- a/index.html
+++ b/index.html
@@ -21,14 +21,8 @@
   </head>
 
   <body>
-    <div class="card col-4">
-      <img src="#" class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title"></h5>
-        <p class="card-text"></p>
-        <a href="#" class="btn btn-primary">Add to Cart</a>
-        <a href="#" class="btn btn-primary">Skip</a>
-      </div>
+    <div class="container">
+      <div class="row"></div>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
