skip button works

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
   </head>
 
   <body>
-    <div class="container">
+    <div id="book-holder" class="container col-12">
       <div class="row"></div>
+    </div>
+    <div class="container">
+      <div class="cart"></div>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
