--- a/index.html
+++ b/index.html
@@ -19,25 +19,13 @@
 
     <title>Book store</title>
   </head>
-
-  <body>
-    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-  My Cart
-      </button>
-    </p>
-    <div class="collapse" id="collapseExample">
-      <div class="card card-body">
-          <div class="container">
-          <div class="row2">
-        </div>
-          </div>
-    </div>
-    </div>
+          
     <div id="book-holder" class="container col-12">
       <div class="row"></div>
     </div>
-    <div class="container">
-      <div class="cart"></div>
+    <div id="book-holder2" class="container">
+        <div class="row2">
+        </div>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
