--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     </p>
     <div class="collapse" id="collapseExample">
       <div class="card card-body">
-          <div class="row2">
+          <div class="row row2">
           </div>
     </div>
     </div>
     <div id="book-holder" class="container col-12">
-      <div class="row"></div>
+      <div class="row row3"></div>
     </div>
     <div class="container">
       <div class="cart"></div>
